Added the loading screen

--- a/src/Greeter.PWA/wwwroot/index.html
+++ b/src/Greeter.PWA/wwwroot/index.html
@@ -25,7 +25,14 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div style="display:grid;place-content:center;place-items:center;text-align:center;height:100dvh">
+            <img src="android-chrome-192x192.png" width="192" alt="Greeter" />
+            <p>Welcome to</p>
+            <h1>Greeter</h1>
+            <small class="muted-color">A simple app to manage events to greet!</small>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
